Fix Navbar gap

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -4,6 +4,10 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-logomodern-business-nav/blob/master/LICENSE)
  */
 
+ .navbar {
+    position: inherit;
+ }
+
  html, body {
     height: 100%;
   }
@@ -19,13 +23,6 @@ body {
 
 .footer {
     flex-shrink: 0;
-}
-
-
-@media (min-width: 992px) {
-    body {
-        padding-top: 56px;
-    }
 }
 
 .d-md-block {
